# infinvis-rate-service

./: .gitignore  Dockerfile  Pipfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: b076c1f9e2b2_added_fx_rates_and_fx_tracking_pairs.py
app/: main.py  models.py
app/alembic/versions/: f8c2eb76c2a0_added_fx_rates_and_fx_tracking_pairs.py
conf/: config.test.ini
dev-env/: docker-compose.yml
dev-env/postgres/: init-db.sh
dev-env/vault/: init_vault.sh  vault.hcl
src/: config.py  main.py
src/fx/: currency_helpers.py  models.py  router.py
src/fx/source/: abstract_source.py  alphavantage.py  polygon.py
tests/: conftest.py  pytest.ini  util.py
tests/fx/source/: test_alphavantage.py  test_polygon.py
tests/fx/source/test_alphavantage/: crypto_3_records.json  fiat_3_records.json
tests/fx/source/test_polygon/: btc_to_usd_3_records.json  crypto_to_fiat_3_records.json  fiat_2_records.json  fiat_to_fiat_2_records.json  fiat_to_fiat_invalid_fiat_code.json
