[project]
name = "infinvis-rate-service"
version = "0.1.0"
description = "Rate service for infinvis project"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]==0.115.12",
    "polars==1.27.1",
    "SQLAlchemy==2.0.40",
    "aiohttp==3.11.16",
    "alembic==1.15.2",
    "psycopg2-binary==2.9.10",
    "currency-codes==23.6.4"
]

[dependency-groups]
dev = [
    "pylint==3.3.6",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "wiremock==2.6.1",
    "aiofiles==24.1.0",
    "testcontainers==4.10.0"
]
